src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: rgb(17 24 39);
  color: white;
}

html, 
body,
#root, 
.app,
.content {
  height: 100%;
  width: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

::selection {
  color: #FF10F0;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 1px;
  border: 1px solid transparent;
}

::-webkit-scrollbar-track {
  background: #e0e0e0;
}

::-webkit-scrollbar-track:hover {
  background: #555;
}

/* Styling for all h2, p */
h1 {
  font-size: 36px;
  font-weight: bold;
}

h2 {
  font-size: 30px;
  font-weight: bold;
}

p {
  font-size: 18px;
}

/* Header */
.header-container {
  display: flex;
}

.header-logo_text a {
  display: flex;
  align-items: center;
}

.header_text {
  color: white;
  font-size: 25px;
  font-weight: 700;
}

.header_logo {
  width: 100px;
  height: auto;
}

.header-links {
  display: flex;
  margin-left: auto;
  margin-right: 10px;
  align-items: center;
  z-index: 10;
}

.youtube-logo-homePage {
  width: 110px;
  height: 25px;
  margin-left: 10px;
}
.x-logo-homePage {
  width: 25px;
  height: 25px;
  margin-left: 10px;
}
.instagram-logo-homePage {
  width: 25px;
  height: 25px;
  margin-left: 10px;
}

.header_forgotPassword, .header_about, .header_investor {
  color: white;
  margin: 0px 10px 0px 0px;
}

/* Home Page */
/* Login and signup button on the top of the home page */
.login-btn_1, .signup-btn_1 {
  padding: 12px;
  margin-right: 8px;
  border-radius: 10px;
  border-width: 3px;
  width: 140px;
  color: white;
  font-size: 18px;
  font-weight: 500;
  background-color: rgb(244 114 182);
  cursor: pointer;
}

/* Login and signup button on the bottom of the home page */
.login-btn_2, .signup-btn_2 {
  padding: 12px;
  margin-right: 8px;
  border-radius: 10px;
  border-width: 3px;
  width: 140px;
  color: white;
  font-size: 18px;
  font-weight: 500;
  background-color: rgb(14 165 233);
  cursor: pointer;
}

/* Includes the hero and buttons on the home page */
.hero-homePage_btn {
  display: flex;
  margin: 260px 300px 0px 0px;
  z-index: 1;
  width: min(65rem, 100% - 4rem);
  margin-inline: auto;
}

/* Styling for the h1 title */
.hero_title {
  font-size: 8rem;
  max-width: 10ch;
  line-height: 1;
  font-style: italic;
  font-weight: 900;
  position: relative;
  
  > span {
    font-style: normal;
    font-size: 0.5em;
    display: block;
  }

  &::after {
    content: "";
    position: absolute;
    inset: 0;
    background: black;
    z-index: -1;
    scale: 2;
    opacity: 0.5;
    filter: blur(5rem);
    translate: -50%;
  }
}

/* Main content on the bottom part of home page */
.main-content {
  display: flex;
  justify-content: center;
  background: hsl(238, 100%, 6%);
  padding: 10px 0px 250px 20px;
}


/* styling for the h2 title for the team at the bottom of the page */
.main-container {
  display: flex;
}

.content-wrapper_homePage {
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
  max-width: 1200px;
}

.home-container {
  flex: 1;
}

.main-container .img-container {
  display: flex;
  align-items: center;
  flex-direction: column;
  margin-right: 30px;
  margin-left: 200px;
}

/* styling for the img at bottom */
.team-img {
  width: 450px;
  height: auto;
}

/* styling for the info at bottom */
.info-homePage {
  margin: 5px;
}

/* Home Page - mobile */
@media (max-width: 1024px) {
  .home-img {
    width: 250px;
  }

  .home-btn-container {
    display: flex;
    flex-direction: column;
  }
  .login-btn {
    margin-right: 5px;
    margin-bottom: 5px;
  }

  .signup-btn {
    margin-top: 5px;
    margin-left: 0px;
    margin-right: 5px;
  }

  .home-heading {
    font-size: 43px;
  }
}


/* Login and Signup page */
 .login_signup-container {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 90vh;
 }

 .login_signup-img {
  height: 500px;
  width: auto;
 }

 .login_signup-content {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  margin-left: 20px;
 }

 .login_signup-btn {
  padding: 10px;
  border-radius: 10px;
  border-width: 3px;
  width: 200px;
  margin-top: 10px;
  color: white;
  font-size: 18px;
  font-weight: 500;
  background-color: rgb(14 165 233);
  cursor: pointer;
 }

 .login_signup-input {
  border-radius: 10px;
  padding: 7px;
  width: 185px;
  margin: 5px;
 }

 .login_signup-label {
  font-size: large;
  font-weight: 500;
  margin-top: 5px;
 }

 .login_signup-link {
  margin-top: 10px;
  color: white;
  font-size: 18px;
 }

 .login_signup-error {
  color: rgb(232, 87, 87);
 }

 .required-field {
  color: rgb(232, 87, 87);
  margin-top: 0;
 }


 /* Footer */
 .footer-container {
  position: absolute;
  bottom: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 10px 10px 10px;
 }

 .footer-logo {
  width: 200px;
  height: auto;
 }

 .footer-logo_name {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
 }

 .footer-text {
  font-size: 18;
  font-weight: bold;
  margin: 0;
 }

 .footer-img {
  width: 150px;
 }







/* Etcha-Sketch */ 
#container {
  display: inline-block;
  margin-left: stretch;
  margin-right: stretch;
  font-size: 0;
  height: 800px;
  width: 800px;
  border: solid 10px grey;
  overflow: hidden;
}

.cell {
  background-color: white;
  border: 1px solid black;
  flex: 1;
  box-sizing: border-box;
  display: inline-block;
}



.parallax {
  overflow: hidden;
  position: relative;
  z-index: 0;
  min-height: 75vh;
  display: grid;
  grid-template-areas: "stack";
}

.parallax > * {
  grid-area: stack;
  animation: parallax linear;
  animation-timeline: scroll();
}

.parallax > img {
  width: 100%;
}

.primary-header, .hero {
  --parallax-speed: 10;
  z-index: 1;
}

.homePage-header {
  --parallax-speed: 0;
  z-index: 2;
  max-height: 60px;
}

.parallax_bg {
  --parallax-speed: 0;
  z-index: -1;
  min-height: 100%;
  width: 100%;
  object-fit: cover;
}

.parallax_dust {
  --parallax-speed: -10;
  z-index: 0;
}

.parallax_luna {
  --parallax-speed: 4;
  z-index: 0;
}

.parallax_manny {
  --parallax-speed: 6;
  z-index: 0;
}

.parallax_jax {
  --parallax-speed: 5;
  z-index: 0;
}

.parallax_rays {
  --parallax-speed: 4;
  z-index: -1;
}

.parallax_foreground-front,
.parallax_foreground-back {
  z-index: 0;
  align-self: end;
}

.parallax_foreground-back {
  transform: scaleY(1.2);
  transform-origin: bottom;
  mix-blend-mode: hard-light;
}

@keyframes parallax {
  to {
    transform: 
      translateY(calc(var(--parallax-speed) * 200px));
  }
}

.primary-header {
  padding-block: 2rem;
  z-index: -1
}

.primary-header_inner {
  display: flex;
  justify-content: space-between;
  align-items: center;
}



@media screen and (max-width: 942px) {
  .SOME-logo {
      display: none;
  }
  .SOME-logo-front {
    display: none;
  }
}

@media screen and (max-width: 942px) {
  .header_about, .header_investor, .header_forgotPassword {
    margin-right: 0;
    padding-right: 0;
  }
}

@media screen and (max-width: 790px) {
  .welcome-user {
    display: none;
  }
}

@media screen and (max-width: 1472px) {
  .pieChart {
    display: grid;
  }
}
@media screen and (max-width: 1000px) {
  .piechart_profile {
    height: 40vh;
    width: 40vh;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0 auto;
  }
}

